--- a/apps.json
+++ b/apps.json
@@ -39,85 +39,52 @@
     },
     "wallpaper": [
 {
-    "Wallpaper":"https://www.xtrafondos.com/wallpapers/vertical/yuji-itadori-de-jujutsu-kaisen-7461.jpg"
+    "Wallpaper":"https://roonby.com/wp-content/uploads/2022/01/cool-anime-wallpaper-hd.jpg"
   },
   {
-    "Wallpaper": "https://myandroidwalls.com/wp-content/uploads/2021/07/Anime-Wallpaper-For-Mobile.jpg"
+    "Wallpaper": "https://browsecat.net/sites/default/files/anime-cool-pic-wallpapers-60936-94745-8841980.png"
   },
   {
-    "Wallpaper": "https://www.mordeo.org/files/uploads/2022/01/Xiao-Genshin-Impact-4K-Ultra-HD-Mobile-Wallpaper-283x503.jpg"
+    "Wallpaper": "https://wallpaperaccess.com/full/6319352.jpg"
   },
   {
-   "Wallpaper": "https://www.teahub.io/photos/full/94-944637_anime-wallpaper-4k-for-mobile.jpg"
+   "Wallpaper": "https://i.pinimg.com/originals/d5/e1/bf/d5e1bf9c7156e464f5e656b93cd5c632.jpg"
   },
   {
-    "Wallpaper": "https://cdn.wallpapersafari.com/9/15/sKwf29.jpg"
+    "Wallpaper": "https://c4.wallpaperflare.com/wallpaper/628/1009/137/anime-boys-blue-eyes-anime-kekkai-sensen-wallpaper-thumb.jpg"
   },
   {
-    "Wallpaper": "https://i.pinimg.com/736x/b2/cd/fc/b2cdfcb7949bb2a132f3d21b3bcebbbd.jpg"
+    "Wallpaper": "https://www.whatspaper.com/wp-content/uploads/2021/03/4k-anime-wallpaper-whatspaper-1.jpg"
   },
   {
-    "Wallpaper": "https://wallpapers.com/images/high/purple-sasuke-pfp-udmj4zxpnf3vikh5.jpg"
+    "Wallpaper": "https://wallpapercave.com/uwp/uwp749638.jpeg"
   },
   {
-    "Wallpaper": "https://wallpaperaccess.com/full/3279848.jpg"
+    "Wallpaper": "https://p4.wallpaperbetter.com/wallpaper/745/67/618/jujutsu-kaisen-anime-boys-anime-hd-wallpaper-preview.jpg"
   },
     {
-    "Wallpaper": "https://img.wallpapersafari.com/phone/1125/2436/65/36/OBZhVr.jpg"
+    "Wallpaper": "https://wallsbazar.com/wp-content/uploads/2021/12/Anime-Computer-Wallpaper.jpg"
   },
   {
-    "Wallpaper": "https://i.pinimg.com/1200x/d8/ff/e8/d8ffe850c3c4a8a916efad916b587362.jpg"
+    "Wallpaper": "https://images.alphacoders.com/549/thumb-1920-549450.png"
   },
   {
-    "Wallpaper": "https://i.pinimg.com/736x/93/77/fd/9377fd8e5b32aa95c7b3eef6f535059c.jpg"
+    "Wallpaper": "https://images7.alphacoders.com/105/thumb-1920-1052849.jpg"
   },
   {
-    "Wallpaper": "https://cdn.wallpapersafari.com/76/13/7YBvck.jpg"
+    "Wallpaper": "https://i.pinimg.com/originals/19/ef/13/19ef1399ed2afe6a786430d3c3da8031.png"
   },
   {
-   "Wallpaper": "https://cutewallpaper.org/21/anime-phone-wallpaper-4k/Anime-Wallpaper-Mobile-4k-Djiwallpaper-Co-Sword-Art-Online-.jpg"
+   "Wallpaper": "https://coolthemestores.com/wp-content/uploads/2021/05/hello-world-anime-chrome-wallpaper.jpg"
   },
   {
-    "Wallpaper": "https://bestwallpapers.net/wp-content/uploads/2021/05/Best-HD-Anime-Wallpapers-Free-Download.jpg"
+    "Wallpaper": "https://wallpapercave.com/wp/wp5118182.jpg"
   },
   {
-    "Wallpaper": "https://c4.wallpaperflare.com/wallpaper/941/725/228/anime-girls-original-characters-women-red-eyes-covered-face-hd-wallpaper-preview.jpg"
+    "Wallpaper": "https://www.guidingtech.com/wp-content/uploads/Best-Anime-Fullmetal-Alchemist-Brotherhood-wallpapers_4d470f76dc99e18ad75087b1b8410ea9.jpg"
   },
   {
-    "Wallpaper": "https://wallpapercave.com/wp/wp7798458.jpg"
-  },
-  {
-    "Wallpaper": "https://coolhdwall.com/storage/202106/muzan-female-form-demon-slayer-4k-phone-wallpaper-2160x3840.jpg"
-  },
-    {
-    "Wallpaper": "https://wallpaper.dog/large/10878225.jpg"
-  },
-  {
-    "Wallpaper": "https://i.pinimg.com/736x/98/78/7a/98787a7df9cd04c434699ebbdccae34c.jpg"
-  },
-  {
-"Wallpaper": "https://cdn.wallpapersafari.com/10/74/u6N1rl.jpg"
-  },
-  {
-    "Wallpaper": "https://i.pinimg.com/originals/4b/ec/a1/4beca1daa1cd9e93502089eeebb51c4c.jpg"
-  },
-  {
-   "Wallpaper":"https://w0.peakpx.com/wallpaper/475/421/HD-wallpaper-gojo-satoru-anime-gojosatoru-iphone-jujutsukaisen-naruto-yuuji-yuujiitadori.jpg"
-  },
-  {
-    "Wallpaper": "https://cdn.mwallpapers.com/photos/wallpapers/anime/anime-wallpaper-for-phone-android-iphone-desktop-hd-backgrounds-wallpapers-1080p-4khd-wallpapers-desktop-background-android-iphone-1080p-4k-lcdcc.jpg"
-  },
-  {
-    "Wallpaper": "https://cdn.wallpapersafari.com/48/99/3Kbfor.jpg"
-  },
-  {
-    "Wallpaper": "https://mobwallpapershd.com/wp-content/uploads/2021/06/Death-Note-Wallpaper-Download.jpg"
-  },
-  {
-    "Wallpaper": "https://wallpaperaccess.com/full/170155.jpg"
-  },
-    {
-    "Wallpaper": "https://i.pinimg.com/736x/02/8f/55/028f55164b55c570cdbc5b604371d626.jpg"
+    "Wallpaper": "https://cdn.statusqueen.com/desktopwallpaper/thumbnail/girl-night-raining-city-car-153.jpg"
   }
 ]
   }
