--- a/apps.json
+++ b/apps.json
@@ -51,16 +51,16 @@
    "Wallpaper": "https://i.pinimg.com/originals/d5/e1/bf/d5e1bf9c7156e464f5e656b93cd5c632.jpg"
   },
   {
-    "Wallpaper": "https://c4.wallpaperflare.com/wallpaper/628/1009/137/anime-boys-blue-eyes-anime-kekkai-sensen-wallpaper-thumb.jpg"
+    "Wallpaper": "https://cdn.statusqueen.com/desktopwallpaper/thumbnail/girl-night-raining-city-car-153.jpg"
   },
   {
     "Wallpaper": "https://www.whatspaper.com/wp-content/uploads/2021/03/4k-anime-wallpaper-whatspaper-1.jpg"
   },
   {
-    "Wallpaper": "https://wallpapercave.com/uwp/uwp749638.jpeg"
+    "Wallpaper": "https://pbs.twimg.com/media/DEo05DuU0AAZ9VC.jpg"
   },
   {
-    "Wallpaper": "https://p4.wallpaperbetter.com/wallpaper/745/67/618/jujutsu-kaisen-anime-boys-anime-hd-wallpaper-preview.jpg"
+    "Wallpaper": "http://images2.fanpop.com/image/photos/9700000/Awesome-Naruto-Wallpapers-naruto-9722768-1280-800.jpg"
   },
     {
     "Wallpaper": "https://wallsbazar.com/wp-content/uploads/2021/12/Anime-Computer-Wallpaper.jpg"
@@ -75,16 +75,16 @@
     "Wallpaper": "https://i.pinimg.com/originals/19/ef/13/19ef1399ed2afe6a786430d3c3da8031.png"
   },
   {
-   "Wallpaper": "https://coolthemestores.com/wp-content/uploads/2021/05/hello-world-anime-chrome-wallpaper.jpg"
+   "Wallpaper": "https://wallpaperaccess.com/full/1217357.jpg"
   },
   {
-    "Wallpaper": "https://wallpapercave.com/wp/wp5118182.jpg"
+    "Wallpaper": "https://c4.wallpaperflare.com/wallpaper/264/75/737/anime-sunset-piano-clouds-wallpaper-preview.jpg"
   },
   {
     "Wallpaper": "https://www.guidingtech.com/wp-content/uploads/Best-Anime-Fullmetal-Alchemist-Brotherhood-wallpapers_4d470f76dc99e18ad75087b1b8410ea9.jpg"
   },
   {
-    "Wallpaper": "https://cdn.statusqueen.com/desktopwallpaper/thumbnail/girl-night-raining-city-car-153.jpg"
+    "Wallpaper": "https://wallpaperaccess.com/full/435.jpg"
   }
 ]
   }
