--- a/apps.json
+++ b/apps.json
@@ -60,7 +60,7 @@
     "Wallpaper": "https://pbs.twimg.com/media/DEo05DuU0AAZ9VC.jpg"
   },
   {
-    "Wallpaper": "http://images2.fanpop.com/image/photos/9700000/Awesome-Naruto-Wallpapers-naruto-9722768-1280-800.jpg"
+    "Wallpaper": "https://cdn.wallpapersafari.com/11/90/hLAkzQ.jpg"
   },
     {
     "Wallpaper": "https://wallsbazar.com/wp-content/uploads/2021/12/Anime-Computer-Wallpaper.jpg"
@@ -78,7 +78,7 @@
    "Wallpaper": "https://wallpaperaccess.com/full/1217357.jpg"
   },
   {
-    "Wallpaper": "https://c4.wallpaperflare.com/wallpaper/264/75/737/anime-sunset-piano-clouds-wallpaper-preview.jpg"
+    "Wallpaper": "https://wallpaperaccess.com/full/1117452.jpg"
   },
   {
     "Wallpaper": "https://www.guidingtech.com/wp-content/uploads/Best-Anime-Fullmetal-Alchemist-Brotherhood-wallpapers_4d470f76dc99e18ad75087b1b8410ea9.jpg"
