--- a/apps.json
+++ b/apps.json
@@ -1,27 +1,27 @@
 { "ADS":
     {
   
-      "banner_type_main":"unity",
-      "inter_type_main":"unity",
+      "banner_type_main":"applovin",
+      "inter_type_main":"applovin",
       "inter_or_reward_main":"inter",
-      "native_type_main":"unity",
-      "reward_type_main": "unity",
-      "native_or_mrec_main": "unity",
+      "native_type_main":"applovin",
+      "reward_type_main": "applovin",
+      "native_or_mrec_main": "mrec",
 
-      "banner_type_data":"unity",
-      "inter_type_data":"unity",
+      "banner_type_data":"applovin",
+      "inter_type_data":"applovin",
       "inter_or_reward_data":"inter",
-      "native_type_data":"unity",
-      "reward_type_data": "unity",
-      "native_or_mrec_data": "unity",
+      "native_type_data":"applovin",
+      "reward_type_data": "applovin",
+      "native_or_mrec_data": "mrec",
 
 
-      "banner_type_content":"unity",
-      "inter_type_content":"unity",
+      "banner_type_content":"applovin",
+      "inter_type_content":"applovin",
       "inter_or_reward_content":"inter",
-      "native_type_content":"unity",
-      "reward_type_content": "unity",
-      "native_or_mrec_content": "unity",
+      "native_type_content":"applovin",
+      "reward_type_content": "applovin",
+      "native_or_mrec_content": "mrec",
 
 
        "ironsource_id": "unity",
@@ -35,17 +35,17 @@
 
   
     
-      "applovin_banner":"ca-app-pub56099942",
-      "applovin_interstitial":"ca-app-pub-567",
+      "applovin_banner":"7dc036a95ab8e332",
+      "applovin_interstitial":"fe3acc809f3c87b1",
       "applovin_reward":"ca-app-pub-4567",
       "applovin_mrec":"ca-app-pub-3940256099942544/5354046379",
       "applovin_native":"ca-app-pub-3940256099942544/5354046379",
 
       "facebook_banner":"ca-app-pub56099942",
       "facebook_interstitial":"ca-app-pub-567",
-      "facebook_reward":"ca-app-pub-4567",
-      "facebook_mrec":"ca-app-pub-3940256099942544/5354046379",
-      "facebook_native":"ca-app-pub-3940256099942544/5354046379"
+      "facebook_reward":"02786725c1e32509",
+      "facebook_mrec":"6c76ee86707de068",
+      "facebook_native":"2f915319fb229ec4"
 
 
   
