--- a/apps.json
+++ b/apps.json
@@ -1,105 +1,143 @@
 { "ADS":
+{
+
+  "banner_type": "admob",
+  "inter_type": "admob",
+  "native_type": "admob",
+  "reward_type": "admob",
+
+  "ironsource_id": "11c7e1165",
+ "unity_id": "4292105",
+
+  
+
+ 
+  "banner_yandex": "adf-279013/966533",
+  "interstitial_yandex": "adf-279013/966533",
+  "native_yandex": "adf-279013/966533",
+  "rewarde_yandex": "adf-279013/966487",
+
+   
+  
+
+  "banner_admob": "ca-app-pub-3940256099942544/1033173712",
+  "interstitial_admob": "ca-app-pub-3940256099942544/6300978111",
+  "native_admob": "ca-app-pub-3940256099942544/2247696110",
+  "rewarde_admob": "ca-app-pub-3940256099942544/5224354917",
+
+   
+  "applovin_banner": "VID_HD_9_16_39S_LINK#4677578285627060_4677588762292679",
+  "applovin_interstitial": "ca-app-pub-4567",
+  "applovin_reward": "ca-app-pub-4567",
+  "applovin_native": "ca-app-pub-4567",
+
+  
+  "facebook_reward": "VID_HD_9_16_39S_LINK#4677578285627060_4677588762292679",
+  "facebook_banner": "ca-app-pub-4567",
+  "facebook_interstitial": "ca-app-pub-4567",
+  "facebook_native": "ca-app-pub-4567"
+
+  
+
+
+
+},
+  "prinkdata": [
     {
-  
-      "banner_type_main":"applovin",
-      "inter_type_main":"applovin",
-      "inter_or_reward_main":"inter",
-      "native_type_main":"applovin",
-      "reward_type_main": "applovin",
-      "native_or_mrec_main": "mrec",
-
-      "banner_type_data":"applovin",
-      "inter_type_data":"applovin",
-      "inter_or_reward_data":"inter",
-      "native_type_data":"applovin",
-      "reward_type_data": "applovin",
-      "native_or_mrec_data": "mrec",
+      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
+      "title": "test title 1 ",
+      "datee": "12-05-2022",
+      "text_Content": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game."
+      
 
 
-      "banner_type_content":"applovin",
-      "inter_type_content":"applovin",
-      "inter_or_reward_content":"inter",
-      "native_type_content":"applovin",
-      "reward_type_content": "applovin",
-      "native_or_mrec_content": "mrec",
+
+    }, {
+      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
+      "title": "test title 2 ",
+      "datee": "12-05-2022",
+      "text_Content": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game."
+      
 
 
-       "ironsource_id": "unity",
-       "unity_id": "4292105",
-
-
-      "cpa_title": "cpa test",
-	"cpa_text": "this is simple cpa body",
-	"cpa_image": "https://wallpaper.dog/large/20487356.jpg",
-      	"cpa_url": "https://wallpaper.dog/large/20487356.jpg",
-
-  
-    
-      "applovin_banner":"7dc036a95ab8e332",
-      "applovin_interstitial":"fe3acc809f3c87b1",
-      "applovin_reward":"ca-app-pub-4567",
-      "applovin_mrec":"ca-app-pub-3940256099942544/5354046379",
-      "applovin_native":"ca-app-pub-3940256099942544/5354046379",
-
-      "facebook_banner":"ca-app-pub56099942",
-      "facebook_interstitial":"ca-app-pub-567",
-      "facebook_reward":"02786725c1e32509",
-      "facebook_mrec":"6c76ee86707de068",
-      "facebook_native":"2f915319fb229ec4"
-
-
-  
     },
-    "guideData": [
     {
-      "imageUrl": "https://wallpaper.dog/large/20487356.jpg",
-      "title": "Lorem 1",
-      "text_Content": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game.",
-       "text_Content_1": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game."
-
-
+      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
+      "title": "test title 3 ",
+      "datee": "12-05-2022",
+      "text_Content": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game."
       
+
+
     }, {
-      "imageUrl": "https://wallpaper.dog/large/20487356.jpg",
-      "title": "Lorem 2",
-      "text_Content": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game.",
-              "text_Content_1": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game."
-
-
+      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
+      "title": "test title 4 ",
+      "datee": "12-05-2022",
+      "text_Content": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game."
       
+
+
+    }, {
+      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
+      "title": "test title 5 ",
+      "datee": "12-05-2022",
+      "text_Content": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game."
+      
+
+
+    }, {
+      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
+      "title": "test title 6 ",
+      "datee": "12-05-2022",
+      "text_Content": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game."
+      
+
+
+
+    }
+  ],
+  "tv_data": [
+    {
+      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
+      "title": "test title 1 ",
+      "url": "https://wallpaper.dog/large/20487356.jpg"
+      
+
+
+
+    }, {
+      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
+      "title": "test title 2 ",
+      "url": "https://wallpaper.dog/large/20487356.jpg"
+
+
     },
-	{
-      "imageUrl": "https://wallpaper.dog/large/20487356.jpg",
-      "title": "Lorem 3",
-      "text_Content": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game.",
-              "text_Content_1": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game."
+    {
+      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
+      "title": "test title 3 ",
+      "url": "https://wallpaper.dog/large/20487356.jpg"
 
 
-      
     }, {
-      "imageUrl": "https://wallpaper.dog/large/20487356.jpg",
-      "title": "Lorem 4",
-      "text_Content": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game.",
-       "text_Content_1": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game."
+      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
+      "title": "test title 4 ",
+      "url": "https://wallpaper.dog/large/20487356.jpg"
 
-      
     }, {
-      "imageUrl": "https://wallpaper.dog/large/20487356.jpg",
-      "title": "Lorem 5",
-      "text_Content": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game.",
-              "text_Content_1": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game."
-	  
-      
-    }, {
-      "imageUrl": "https://wallpaper.dog/large/20487356.jpg",
-      "title": "Lorem 6",
-      "text_Content": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game.",
-            "text_Content_1": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game."
+      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
+      "title": "test title 5 ",
+      "url": "https://wallpaper.dog/large/20487356.jpg"
 
-      
+
+    }, {
+      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
+      "title": "test title 6 ",
+      "url": "https://wallpaper.dog/large/20487356.jpg"
+
+
+
     }
   ]
-  }
-  
-  
-  
+}
+
+
