--- a/apps.json
+++ b/apps.json
@@ -1,150 +1,173 @@
 {
-	"ADS": {
-		 "banner_type": "admob",
-		"inter_type": "admob",
-		"native_type": "admob",
-		"reward_type": "admob",
 
-		 
-		"ironsource_id": "4292105",
+	"ADS":
 
- 
-		"unity_id": "11c7e1165",
-
-		"banner_yandex": "adf-279013/966533",
-		"interstitial_yandex": "adf-279013/966533",
-		"native_yandex": "adf-279013/966533",
-		"rewarde_yandex": "adf-279013/966487",
-
-		"interstitial_yandex1": "adf-279013/966533",
-		"rewarde_yandex1": "adf-279013/966487",
-
-		"interstitial_yandex2": "adf-279013/966533",
-		"rewarde_yandex2": "adf-279013/966487",
-
-		"interstitial_yandex_1": "adf-279013/966533",
-		"rewarde_yandex_1": "adf-279013/966533",
-
-		"interstitial_yandex_2": "adf-279013/966533",
-		"rewarde_yandex_2": "adf-279013/966533",
-		
-
-		"interstitial_admob": "ca-app-pub-3940256099942544/1033173712",
-		"banner_admob": "ca-app-pub-3940256099942544/6300978111",
-		"native_admob": "ca-app-pub-3940256099942544/2247696110",
-		"rewarde_admob": "ca-app-pub-3940256099942544/5224354917",
-
-		"interstitial_admob1": "ca-app-p12",
- 		"rewarde_admob1": "ca-app-pub-3940256099942544/5354046379",
-
-		"interstitial_admob2": "ca-app-pub-3940256099942544/1033173712",
- 		"rewarde_admob2": "ca-app-pub-3940256099942544/5354046379",
-
-		"applovin_banner": "VID_HD_9_16_39S_LINK#4677578285627060_4677588762292679",
-		"applovin_interstitial": "ca-app-pub-4567",
-		"applovin_reward": "ca-app-pub-4567",
-		"applovin_native": "ca-app-pub-4567",
+		   {
 
 		
-		"facebook_reward": "VID_HD_9_16_39S_LINK#4677578285627060_4677588762292679",
-		"facebook_banner": "ca-app-pub-4567",
-		"facebook_interstitial": "ca-app-pub-4567",
-		"facebook_native": "ca-app-pub-4567" 
-   }, "prinkdata": [
-    {
-      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
-      "title": "test title 1 ",
-      "datee": "12-05-2022",
-      "text_Content": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game."
-      
+
+			"banner_main_type":"unity",
+
+			"inter_main_type":"unity",
+
+			"native_main_type":"unity",
+
+			
+
+			"banner_tips_type":"unity",
+
+			"inter_tips_type":"unity",
+
+			"native_tips_type":"unity",
+
+   
+
+   		        "banner_desc_type":"unity",
+
+			"inter_desc_type": "unity",
+
+			"native_desc_type" :"unity",
+
+			
+
+			"banner_wall_type":"unity",
+
+			"inter_wall_type":"unity",
+
+			"native_wall_type":"unity",
+
+   
+
+		
+
+			
+
+			"unity_id":"5026383",
 
 
 
-    }, {
-      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
-      "title": "test title 2 ",
-      "datee": "12-05-2022",
-      "text_Content": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game."
-      
+			"ironsource_id":"g",
 
+			
 
-    },
-    {
-      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
-      "title": "test title 3 ",
-      "datee": "12-05-2022",
-      "text_Content": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game."
-      
+			
 
+			
 
-    }, {
-      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
-      "title": "test title 4 ",
-      "datee": "12-05-2022",
-      "text_Content": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game."
-      
+			"banner_admob":"ca-app-pub-7745594200951441/6206360597",
 
+			"interstitial_admob":"ca-app-pub-7745594200951441/3388625569",
 
-    }, {
-      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
-      "title": "test title 5 ",
-      "datee": "12-05-2022",
-      "text_Content": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game."
-      
+			"native_admob":"ca-app-pub-7745594200951441/5823217214",
 
+   
 
-    }, {
-      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
-      "title": "test title 6 ",
-      "datee": "12-05-2022",
-      "text_Content": "This app contains all of the hints, tips, and techniques that we've learned while playing Block'em All game. Hopefully, these methods will assist you in improving you level at this game."
-      
+			"banner_admob1":"ca-app-pub-7745594200951441/6206360597",
 
+			"interstitial_admob1":"ca-app-pub-7745594200951441/3388625569",
 
+			"native_admob1":"ca-app-pub-7745594200951441/5823217214",
 
-    }
-  ],
-  "tv_data": [
-    {
-      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
-      "title": "test title 1 ",
-      "url": "https://wallpaper.dog/large/20487356.jpg"
-      
+   
 
+			"banner_admob2":"ca-app-pub-7745594200951441/6206360597",
 
+			"interstitial_admob2":"ca-app-pub-7745594200951441/3388625569",
 
-    }, {
-      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
-      "title": "test title 2 ",
-      "url": "https://wallpaper.dog/large/20487356.jpg"
+			"native_admob2":"ca-app-pub-7745594200951441/5823217214",
 
+   
 
-    },
-    {
-      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
-      "title": "test title 3 ",
-      "url": "https://wallpaper.dog/large/20487356.jpg"
+		   "facebook_interstitial": "556375692598382_557233965845888",
 
+		   "facebook_banner": "556375692598382_557233719179246",
 
-    }, {
-      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
-      "title": "test title 4 ",
-      "url": "https://wallpaper.dog/large/20487356.jpg"
+		   "facebook_native": "556375692598382_557234272512524",
 
-    }, {
-      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
-      "title": "test title 5 ",
-      "url": "https://wallpaper.dog/large/20487356.jpg"
+		   
 
+		    "yandex_interstitial": "IMG_16_9_APP_INSTALL#4677578285627060_4677588762292679",
 
-    }, {
-      "Image_Url": "https://wallpaper.dog/large/20487356.jpg",
-      "title": "test title 6 ",
-      "url": "https://wallpaper.dog/large/20487356.jpg"
+		   "yandex_banner": "IMG_16_9_APP_INSTALL#4677578285627060_4677591608959061",
 
+		   "yandex_native": "IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID",
 
+		   
 
-    }
-  ]
-}
+		   "applovin_interstitial": "24036e00f8614e92",
 
+		   "applovin_banner": "6d1bd7e1db23a1a8",
+
+		   "applovin_mrec": "3588746611111fca",
+
+		   
+
+   "image1":"https://animasmarketing.com/wp-content/uploads/2022/02/snaptik-application.jpg",
+
+   "image2":"https://animasmarketing.com/wp-content/uploads/2022/02/snaptik-application.jpg",
+
+   "image3":"https://animasmarketing.com/wp-content/uploads/2022/02/snaptik-application.jpg",
+
+   "image4":"https://animasmarketing.com/wp-content/uploads/2022/02/snaptik-application.jpg",
+
+   "image5":"https://animasmarketing.com/wp-content/uploads/2022/02/snaptik-application.jpg",
+
+   "image6":"https://animasmarketing.com/wp-content/uploads/2022/02/snaptik-application.jpg",
+
+   "image7":"https://animasmarketing.com/wp-content/uploads/2022/02/snaptik-application.jpg",
+
+   "image8":"https://animasmarketing.com/wp-content/uploads/2022/02/snaptik-application.jpg",
+
+   "image9":"https://animasmarketing.com/wp-content/uploads/2022/02/snaptik-application.jpg",
+
+   "image10":"https://animasmarketing.com/wp-content/uploads/2022/02/snaptik-application.jpg",
+
+   
+
+   "tip1":"Drink to our Five Nights at Freddy's Security Breach Walkthrough and Guide. Our attendants aim to give you a strong understanding of The chart, the different animatronics you'll be facing and movement. We'll guide you through the main operations as well as side operations and show you where to find useful collectibles. We will, of course, also show you the way to get the different consummations this game has.Preface Five Nights at Freddy's Security Breach is the rearmost game of the FNAF ballot. Your charge consists of surviving until you can exit the Freddy Fazbear's Mega Pizza Plex. You'll need to fulfill a number of history- related operations, but after, you can bat around the complex as you please. Each time you fulfill operations the time will pass and you'll be near to 6 AM, the exact time that the exits will open and you can reach for them.The game has 6 different consummations to be uncorked. Some will depend on the opinions you make during your playthrough and some will depend on the door you use to exit the complex.",
+
+   "tip2":"After your dialogue with Freddy, you have to find a Backstage Pass to help him. Head towards the door on the left side of the room, save your game and keep going. Go the only way you can go and after you cross a red door, you'll be in a big room with lots of security bots and Roxy. Go straight from the door and sneak your way until you reach the trial room.Formerly on that room, save your game and look on the top left corner to find the Backstage Pass. You can also enter the lower room with the blue doors to find a Flashlight Battery Upgrade. Exit the area and in the coming big room, enter the first door on your leftism. Go up the stairs and cross the doors with the signs on them.\n Confidentially \n Now you're in the confidentially office. Head to the security emblem and interact with it. You'll find a Security Emblem and a Performance Fragment. The alarm will spark formerly further and the doors will seal. Roxy and Monty are banging on the doors.You can see one examiner on the leftism, where Roxy is and one examner on the right, with Monty. What you need to do is check the examiner to see which door is being hit, and also press the button next to it to stun your adversaries and stop them from entering the room. While doing this, you'll also have to watch the observers in the middle of the room and find Freddy. When you see him on any examiner, look for the closes button and press it to open the doors for him. After pressing all of the buttons to help Freddy. He'll open the articulation on the bottom and you'll jump to him",
+
+   "tip3":"After being caught by Vanessa, you'll appear in the Lost and Plant room. Vanessa will appear on the examiner and after a many words, Vanny will appear too. She's coming towards you and you need to escape.\n Snare the gift in the room, it's a Screwdriver. Use it to open the articulation right from the office. Also continue going until you reach the elevator. After you get in, Freddy will ask you to meet him in the Roxy Raceway entrance on the alternate bottom. 662px-FNAFSB_Sodarom.jpg Head to the alternate bottom, and access the essence shutter below the sodarom sign. Keep going forward and, when you see the robot, the boxes will be there, just climb them up to jump over the rustic construction hedge. You'll see Freddy laying on the ground",
+
+   "tip4":"Head towards the food court on the first bottom of the main area, the door requires a advanced security concurrence than the bone you have so you have to pierce through the articulation close to Salads and Sides. Once you enter the articulation and start advancing, a lower animatronic will start to chase you, sprint while squinched to stay ahead of him and you'll end up falling to the ground.\nSave your game and head towards any door. You'll find Chica in the coming room, you can be quiet or just run and she'll chase you, run and cross the office, also go through the door and keep running, managing your stamina until you enter the security office. Formerly there, remember to save your game and snare the security emblem. Chica will start pounding on the door.\nYou'll be granted access to a examiner to control a robot and try to make a pizza to distract Chica, just follow the orders the computer is giving you before the timekeeper runs out and you'll be safe. Once Chica is distracted eating the pizza, save your game again and leave the room, turn left and go down the stairs, turn right and head to the doors with the sing Exit to Docks. Keep going, you'll pass another door and right ahead of you, a set of controls. Once you're coming to the controls, you find out that you need a advanced security emblem and Freddy will ask you to go back to him.\n Go left and cross the door, you'll see Chica there, you can choose to go quietly or just try to overrun her. I recommend covert since there are lots of security bots in the coming apartments. Keep going until you find the area with the washing machines, there, look to the left and go that way. Go through the first door you see and a Chart bot will surprise you, also, out of nowhere. Vanessa appears and grabs you.",
+
+   "tip5":"Go to the third bottom and find El Chip's entrance. Formerly by, head right and cross the 2 essence shutters. Now that you're inside the East Arcade, go to your right and you'll find a security door locked. Follow the wall on your right to get to another door which is going to be closed too. Look back and left and you'll see a articulation that you can pierce. Go outside and sprint to avoid the small animatronic shadowing you inside the articulation.\nAfter you get out of the articulation, enter the security office and save your game. When you snare the Security Badge the office will be put on lockdown. Freddy can disable it but you need to stay 3 twinkles, the timekeeper is in the middle of the observers. Roxy and Monty will come near to you, I plant that the stylish way to get past this part is to enter covert mode and be impeccably still just below the Save your Spot station, coming to a red press.\nNow get out of the room and you'll be at the Prize Counter. You need to get to the aft part to find the exigency exit. Roxy will be around so be careful. You can choose to cross the essence shutter and go right or go left, where you'll find a save station, also cross the circle room to get to the other side. Now walk left and you'll see the exigency exit, get close to it to spark a small cinematic. The door is closed and you need to get back to the front of the prize counter and get into the elevator. Once you're there, a chart bot will stop you and Vanessa will catch you and take you.",
+
+   "tip6":"Cross the room and save your game, left from the save you'll find a Complimentary Entry Pass. Snare it and also go to the middle of the room and open the walls. Be careful, Chica and some security bots are roving the area. Climb the stairs and turn right. Enter the gift shop and go to the first position. You'll find a attraction. Now go to the alternate position again and head to the left side. Cross the door, avoid the security bot and cross the door on your right. Head down and use your pass on the client service machine. It'll get wedged, use the attraction and you'll get a Daycare Pass. Go back into your way, the entrance to the Daycare is on the right side up the stairs.\nThere are some print cells on the alternate bottom that you can use to avoid Chica in case you need it.\nCross the Daycare door and continue forward. Save your game and cross the essence shutter. Once outside, use the lair in front of you to go down into the Daycare.",
+
+   "tip7":"Scary Teacher 3D is a fun but thrilling simulation game. Published by Z & K Games, it’s a scary simulation game where you get to prank your neighbor. However, that neighbor also happens to be your creepy high school teacher, Miss T. Pranking someone, especially a teacher, might not look nice but Miss T deserves it. She has been very mean to students and has made their lives a living hell while in school.",
+
+   "tip8":"Scary Teacher 3D is a fun but thrilling simulation game. Published by Z & K Games, it’s a scary simulation game where you get to prank your neighbor. However, that neighbor also happens to be your creepy high school teacher, Miss T. Pranking someone, especially a teacher, might not look nice but Miss T deserves it. She has been very mean to students and has made their lives a living hell while in school.",
+
+   "tip9":"Scary Teacher 3D is a fun but thrilling simulation game. Published by Z & K Games, it’s a scary simulation game where you get to prank your neighbor. However, that neighbor also happens to be your creepy high school teacher, Miss T. Pranking someone, especially a teacher, might not look nice but Miss T deserves it. She has been very mean to students and has made their lives a living hell while in school.",
+
+   "tip10":"Scary Teacher 3D is a fun but thrilling simulation game. Published by Z & K Games, it’s a scary simulation game where you get to prank your neighbor. However, that neighbor also happens to be your creepy high school teacher, Miss T. Pranking someone, especially a teacher, might not look nice but Miss T deserves it. She has been very mean to students and has made their lives a living hell while in school.",
+
+   
+
+   "title1":"Dress up Walkthrough",
+
+   "title2":"Dress up space",
+
+   "title3":"lost and found",
+
+   "title4":"loading dock",
+
+   "title5":"prize counter",
+
+   "title6":"main lobby",
+
+   "title7":"Dress up fast 7",
+
+   "title8":"Dress up fast 8",
+
+   "title9":"Dress up fast 9",
+
+   "title10":"Dress up fast 10"
+
+	  }
+
+   
+
+   }
